--- a/KarateChop/KarateChop.csproj
+++ b/KarateChop/KarateChop.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IKarateChop.cs" />
+    <Compile Include="IterativeKarateChop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
