--- a/KarateChop/KarateChop.csproj
+++ b/KarateChop/KarateChop.csproj
@@ -43,6 +43,7 @@
     <Compile Include="IKarateChop.cs" />
     <Compile Include="IterativeKarateChop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecursiveKarateChop.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
