Added unit test and reading of columns and data rows.

--- a/CodingKatas.Tests/CodingKatas.Tests.csproj
+++ b/CodingKatas.Tests/CodingKatas.Tests.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="KarateChopTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DataMungingTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
